--- a/todo.org
+++ b/todo.org
@@ -1,8 +1,8 @@
-* [2/3] prototyping
+* [3/3] prototyping
 
 - [X] full MIDI thru (all in->out)
 - [X] initialize repo
-- [ ] working build pipeline
+- [X] working build pipeline
 
 * [0/2] todos
 
